--- a/css/main.css
+++ b/css/main.css
@@ -38,3 +38,16 @@
         margin-top: 120px;
     }
 }
+
+
+
+#video {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+#video > iframe {
+    max-width: 560px;
+    width: 100%;
+}
