--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,69 @@
     justify-content: center;
 }
 
-#video > iframe {
+#video>iframe {
     max-width: 560px;
     width: 100%;
+}
+
+#pricing {
+    margin-top: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.product {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: calc(100% / 3);
+    margin: 10px;
+    border: 1px solid #000;
+    border-radius: 3px;
+}
+
+.product>.level {
+    background-color: #ddd;
+    color: black;
+    padding: 15px 0;
+    width: 100%;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.product>h2 {
+    margin-top: 15px;
+}
+
+.product>img {
+   min-height: 1000px;
+   width: 1080px;
+   display: flex;
+}
+
+.product>button {
+    border: 0;
+    margin: 15px 0;
+    background-color: var(--btn-color);
+    font-weight: 400;
+}
+
+.product>button:hover {
+    background-color: var(--btn-hover-color);
+    transition: background-color 1s;
+}
+
+@media (max-width: 800px) {
+    #pricing {
+        flex-direction: column;
+    }
+
+    .product {
+        max-width: 300px;
+        width: 100%;
+        margin: 0 auto;
+        margin-bottom: 10px;
+    }
 }
