--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,4 @@
-@import 'https://fonts.googleapis.com/css?family=Lato:400,700';
+@import url('https://fonts.googleapis.com/css2?family=Averia+Libre:wght@400;700&family=Bebas+Neue&family=Lato:ital,wght@0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap');
 
 * {
     margin: 0;
@@ -7,7 +7,8 @@
 }
 
 :root {
-    --background-color: #d3c9d4;
+    --background-color: #ffffff;
+    --grid-bg-color: #ede9e9;
     --btn-color: #958996;
     --btn-hover-color: #623b66;
     font-family: 'Lato', sans-serif;
