--- a/css/controls.css
+++ b/css/controls.css
@@ -1,11 +1,11 @@
 .btn {
     padding: 0 20px;
     height: 40px;
-    font-size: 1em;
-    font-weight: 900;
-    text-transform: uppercase;
+    font-size: 0.9em;
+    font-weight: 700;
+    text-transform:capitalize;
     border: 3px black solid;
-    border-radius: 2px;
+    border-radius: 16px;
     background: transparent;
     cursor: pointer;
 }
