buttons style updated

--- a/css/controls.css
+++ b/css/controls.css
@@ -4,8 +4,21 @@
     font-size: 0.9em;
     font-weight: 700;
     text-transform:capitalize;
-    border: 3px black solid;
+    border: 3px var(--dark-color) solid;
     border-radius: 16px;
     background: transparent;
     cursor: pointer;
+}
+
+.product>button {
+    border: 0;
+    margin: 15px 0;
+    background-color: var(--btn-color);
+    font-weight: bold;
+    
+}
+
+.product>button:hover {
+    background-color: var(--btn-hover-color);
+    transition: background-color 1s;
 }
