--- a/css/common.css
+++ b/css/common.css
@@ -11,6 +11,9 @@
     --grid-bg-color: #ede9e9;
     --btn-color: #958996;
     --btn-hover-color: #623b66;
+    --a-link-color:#6c6565;
+    --prices-text:#764141;
+    --dark-color:#000000;
     font-family: 'Lato', sans-serif;
 }
 
@@ -23,7 +26,7 @@ li {
 }
 
 a {
-    color: #000;
+    color:var(--a-link-color);
     text-decoration: none;
 }
 
