--- a/css/footer.css
+++ b/css/footer.css
@@ -1,23 +1,28 @@
 footer {
-    margin-top: 30px;
-    background-color: #ddd;
-    padding: 20px;
-  }
-  
-  footer > ul {
-    display: flex;
-    justify-content: flex-end;
-  }
-  
-  footer > ul > li {
-    padding: 0 10px;
-  }
-  
-  footer > span {
-    margin-top: 5px;
-    display: flex;
-    justify-content: flex-end;
-    font-size: 0.9em;
-    color: #444;
-  }
-  
+  margin-top: 30px;
+  background-color: var(--grid-bg-color);
+  padding: 20px;
+}
+
+footer>ul {
+  display: flex;
+  justify-content: flex-end;
+}
+
+footer>ul>li {
+  padding: 0 10px;
+  font-size: 1em;
+}
+
+footer>ul>li>a {
+  color: var(--footer-text-color);
+  font-weight: 600;
+}
+
+footer>span {
+  margin-top: 10px;
+  display: flex;
+  justify-content: flex-end;
+  font-size: 1em;
+  color: var(--footer-text-color);
+}
