--- a/css/header.css
+++ b/css/header.css
@@ -71,6 +71,11 @@ nav>ul {
     justify-content: space-around;
 }
 
+nav>ul>li>a{
+    color: var(--footer-text-color);
+    font-weight: 800;
+}
+
 @media (max-width: 650px) {
     nav>ul {
         flex-direction: column;
