--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,9 @@
 header {
     position: fixed;
     top: 0;
+    left: 0;
+    right: 0;
+    height: 20px;
     min-height: 75px;
     padding: 0px 20px;
     display: flex;
@@ -71,9 +74,44 @@ nav>ul {
     justify-content: space-around;
 }
 
-nav>ul>li>a{
+.nav-link {
     color: var(--footer-text-color);
     font-weight: 800;
+}
+
+.nav-link:hover {
+    background-image: linear-gradient(to right,
+            var (--footer-text-color),
+            var (--footer-text-color) 50%,
+            var(--dark-color) 50%);
+    background-size: 200% 100%;
+    background-position: -100%;
+    display: inline-block;
+    padding: 5px 0;
+    position: relative;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: var(--a-link-color);
+    transition: all 0.3s ease-in-out;
+}
+
+a:before {
+    content: '';
+    background: var(--btn-color);
+    display: block;
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+    width: 0;
+    height: 1px;
+    transition: all 0.3s ease-in-out;
+}
+
+a:hover {
+    background-position: 0;
+}
+
+a:hover::before {
+    width: 100%;
 }
 
 @media (max-width: 650px) {
