--- a/css/footer.css
+++ b/css/footer.css
@@ -11,7 +11,7 @@ footer>ul {
 
 footer>ul>li {
   padding: 0 10px;
-  font-size: 1em;
+  font-size: 0.8em;
 }
 
 footer>ul>li>a {
@@ -23,6 +23,6 @@ footer>span {
   margin-top: 10px;
   display: flex;
   justify-content: flex-end;
-  font-size: 1em;
+  font-size: 0.7rem;
   color: var(--footer-text-color);
 }
