--- a/css/common.css
+++ b/css/common.css
@@ -17,6 +17,7 @@
     --footer-text-color: #2a2727;
     --prices-text: #764141;
     --dark-color: #000000;
+    --nav-toggler-color:#f5f1f1;
     font-family: 'Lato', sans-serif;
 }
 
