--- a/css/main.css
+++ b/css/main.css
@@ -54,36 +54,38 @@
     justify-content: center;
     text-align: center;
     height: 200px;
-    margin-top:40px;
+    margin-top: 40px;
+    margin-bottom: -40px;
     font-family: 'Averia Libre', cursive;
 }
 
 .hours_title {
     margin-bottom: 15px;
-    margin-top: 70px;
+    margin-top: 80px;
 }
 
 .hours_subtitle {
     font-size: 1rem;
     font-weight: 600;
 }
+
 #video {
     margin-top: 20px;
     margin-left: 15px;
     margin-right: 15px;
     display: flex;
-    justify-content:flex-start;
-    
+    justify-content: flex-start;
 }
 
 #video>iframe {
     max-width: 460px;
     width: 100%;
     border: none;
+    margin-top: 75px;
 }
 
 #pricing {
-    margin-top: 60px;
+    margin-top: 80px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -98,7 +100,7 @@
     margin: 10px;
     border: 1px solid var(--a-link-color);
     border-radius: 20px;
-    background-color: var( --grid-bg-color);
+    background-color: var(--grid-bg-color);
 }
 
 .product>.level {
@@ -128,7 +130,7 @@
 @media (max-width: 800px) {
     #pricing {
         flex-direction: column;
-        margin-top: 90px;
+        margin-top: 60px;
     }
 
     .product {
